--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.7",
+    "@react-navigation/native-stack": "^6.3.0",
     "react": "17.0.2",
     "react-native": "0.67.1",
     "react-native-modal": "^13.0.0",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.10.2",
+    "react-native-super-grid": "^4.2.0",
     "react-native-vector-icons": "^9.0.0"
   },
   "devDependencies": {
